[package]
name = "qapro-rs"
version = "0.1.1"
authors = ["yutiansut <yutiansut@qq.com>"]
edition = "2018"
resolver = "2"
description ="quantaxis rust version"
license = "MIT"
homepage ="https://github.com/yutiansut/quantaxis"
repository="https://github.com/quantaxis/quantaxis"



[dependencies]
ntapi = "0.4.1"
serde_json = "1.0.127"
serde_derive = "1.0.209"
serde = { version = "1.0.209", features = ["derive"] } # 序列化

stopwatch = "0.0.7"


uuid = { version = "1.10.0", features = ["serde", "v1", "v4"] }
log = "0.4"
regex = "1"
log4rs = "1.3.0"

rayon ="1.10.0"
lazy_static = "1.5.0"

reqwest = "0.12.7"
csv = "1.1.3"
clap = "4.5.16"
toml = "0.8.19"
redis = "0.26.1"
amiquip = "0.4.0"


bson = "2.11.0"
mongodb = {version = "3.1.0", default-features = false, features = ["compat-3-0-0", "sync", "rustls-tls"]}

#redis-async = { version = "0.8", default-features = false, features = ["tokio10"] }
redis-async = { version = "0.17.2", default-features = false, features = ["tokio-native-tls"] }
#actix-web-actors={ version = "4.0.0-beta.8", default-features = false }
actix-web-actors={ version = "4.3.1+deprecated", default-features = false }
#actix-redis = "0.10.0-beta.4"
actix-redis = "0.13.1+deprecated"
#actix = "0.12.0"
actix = "0.13.5"
#actix-rt = "2.5.0"
actix-rt = "2.10.0"
#actix-web ={ version = "4.0.0-beta.5" ,default-features = false }
actix-web ={ version = "4.9.0" ,default-features = false }
actix-cors = "0.7.0"

futures="0.3.5"
futures-executor = "^0.3"
futures-test = "^0.3"
futures-util = "^0.3"
async-trait= "0.1.52"
chrono-tz= { version = "0.9.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }

thiserror = "1.0"
rand = "0.8.5"
quadprog = "0.0.1"
itertools = "0.13.0"


##parsers

parse-display = "0.10.0"
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde_yaml = "0.9.34+deprecated"
serde_partiql = "1.1.64"
structopt = { version = "0.3.21", optional = true }
anyhow = "1.0.40"
atty = "0.2.14"
bat = { version = "0.24.0", optional = true }
collect-mac = "0.1.0"
indexmap = { version = "2.5.0", features = ["serde"] }

nom = "7.1.3"
ordered-float = { version = "4.2.2", default-features = false, features = [
    "serde",
] }
#arrow = {version='6.4.0',default-features = true,   features = ["csv", "prettyprint", "ipc"] }
#
#datafusion = {version='6.0.0'}
exmex = { git = "https://github.com/bertiqwerty/exmex.git", branch = "main" }

evalexpr = "11.3.0"

clickhouse-rs = { version = "1.0.0-alpha.1"}


[dependencies.polars]
version = "0.42.0"
#git = "https://github.com/yutiansut/polars"
#rev = "1ceffe980c970794c4a299d20ca94cffe8e8ff1c"
default-features = false
features = [
#"dynamic_groupby",
  "zip_with",
  "rolling_window",
#  "simd",
  "lazy",
  "strings",
  "temporal",
  "random",
  "object",
#  "csv-file",
#  "pretty_fmt",
  "performant",
  "dtype-full",
  "rows",
#  "private",
  "round_series",
#  "is_first",
  "asof_join",
  "cross_join",
  "dot_product",
  "concat_str",
  "row_hash",
  "reinterpret",
  "decompress-fast",
  "mode",
  "extract_jsonpath",
#  "lazy_regex",
  "cum_agg",
  "rolling_window",
  "interpolate",
#  "list",
  "rank",
  "diff",
  "pct_change",
  "moment",
#  "arange",
  "true_div",
  "dtype-categorical",
  "diagonal_concat",
#  "horizontal_concat",
  "abs",
  "ewma",
  "dot_diagram",
  "dataframe_arithmetic",
  "json",
  "string_encoding",
  "product",
  "ndarray",
  "parquet"
]


#[dependencies.clickhouse-rs]
#version = "1.1.21"
#default-features = false
#features = ["async_std"]




